fix(table): unexpect horizontal scroll appear
fix #278

--- a/style/table.scss
+++ b/style/table.scss
@@ -66,6 +66,8 @@ $table: map.merge(
   border: $border-a transparent;
 
   &__wrapper {
+    width: 100%;
+
     .#{$namespace}-scroll__wrapper {
       min-width: 100%;
     }
